Minor fixes
- Fix background-color delay when initializing with a dark theme
- Move scrollbar for a segment controlled by VUE instead of the HTML body tag
- Code cleanup

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,1 @@
 @import "./base.css";
-
-body {
-  overflow: hidden;
-}
-
-#app {
-  max-width: 48rem;
-  margin   : 0 auto;
-}
